# FireRSS

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  READEME.md  README.md  tox.ini
Docker/: .dev.env  .env  dev.env  docker-compose.dev.yml
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/fire_rss/: app.py  main.py
backend/fire_rss/base/: const.py  db.py  errors.py  log.py  restful.py
backend/fire_rss/config/: config.dev.py  config.example.py
backend/fire_rss/db_migrations/: 001_user_table.py
backend/fire_rss/managers/: __init__.py  options.py  user.py
backend/fire_rss/models/: __init__.py  options.py  user.py
backend/fire_rss/routers/: __init__.py  user.py
backend/fire_rss/schemas/: user.py  users.py
backend/fire_rss/tools/: db_migrate.py  init_db.py
backend/fire_rss/views/: __init__.py  user.py
frontend/: .env  .env.development  README.md  components.d.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: main.ts
frontend/src/api/: baseRequest.ts  user.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/lang/: en.ts  zh.ts
frontend/src/layout/: LayoutAside.vue  LayoutFooter.vue  LayoutHeader.vue  LayoutMain.vue  MainLayout.vue  MainLayoutAside.vue  MainLayoutFooter.vue  MainLayoutHeader.vue
frontend/src/router/: index.ts
frontend/src/stores/: user.ts
frontend/src/styles/: base.scss  var.scss  variables.module.scss
frontend/src/views/auth/: SignIn.vue  SignUp.vue
