[project]
name = "fire-rss-backend"
dynamic = ["version"]
authors = [{ name="weixiao1998" }]
description = "FireRSS backend"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi[standard]==0.116.1",
    "sqlalchemy==2.0.41",
    "mysqlclient==2.2.7",
    "bcrypt==4.3.0",
    "sqlmodel==0.0.24",
]

[project.urls]
"Homepage" = "https://github.com/weixiao1998/FireRSS"
"Source Code" = "https://github.com/weixiao1998/FireRSS"
"Bug Tracker" = "https://github.com/weixiao1998/FireRSS/issues"

[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "fire_rss.__version__"}

[tool.setuptools_scm]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]

[tool.ruff]
line-length = 99
target-version = "py313"

[tool.ruff.lint]
preview = true

select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
